--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>sigma</title>
+    <title>Da scripts!</title>
 </head>
 <body>
-    <h1>hello</h1>
-    <p>123</p>
+    <h1>hi</h1>
+    <p>.</p>
 </body>
 </html>
