--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Da scripts!</title>
+    <title>123</title>
+    <style>
+        body {
+            background-color: #d3d3d3; /* Светло-серый цвет */
+            margin: 0; /* Убирает отступы */
+            padding: 0; /* Убирает внутренние отступы */
+            font-family: Arial, sans-serif; /* Устанавливает шрифт */
+        }
+    </style>
 </head>
 <body>
-    <h1>hi</h1>
-    <p>.</p>
 </body>
 </html>
