--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>123</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Мой сайт</title>
     <style>
+        @keyframes backgroundFade {
+            0% {
+                background-color: white;
+            }
+            50% {
+                background-color: black;
+            }
+            100% {
+                background-color: white;
+            }
+        }
+
         body {
-            background-color: #d3d3d3; /* Светло-серый цвет */
-            margin: 0; /* Убирает отступы */
-            padding: 0; /* Убирает внутренние отступы */
-            font-family: Arial, sans-serif; /* Устанавливает шрифт */
+            animation: backgroundFade 5s infinite;
+            transition: background-color 2s ease;
+            color: #333;
         }
     </style>
 </head>
 <body>
+    <h1>s</h1>
+    <p>s.</p>
 </body>
 </html>
