--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     </style>
 </head>
 <body>
-    <img src="discord.png" alt="Discord Logo">
+    <img src="https://cdn.pfps.gg/pfps/6918-discord-logo-11.png" alt="Discord Logo">
 </body>
 </html>
