--- a/index.html
+++ b/index.html
@@ -5,21 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord Logo Centered</title>
     <style>
-        @keyframes backgroundFade {
-            0% {
-                background-color: white;
-            }
-            50% {
-                background-color: black;
-            }
-            100% {
-                background-color: white;
-            }
-        }
-
         body {
-            animation: backgroundFade 5s infinite;
-            transition: background-color 2s ease;
+            background-color: black;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -34,6 +21,6 @@
     </style>
 </head>
 <body>
-    <img src="discord-logo.png" alt="Discord Logo">
+    <img src="https://cdn.pfps.gg/pfps/6918-discord-logo-11.png" alt="Discord Logo">
 </body>
 </html>
