--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Discord Logo Centered</title>
     <style>
         body {
-            background-color: black;
+            background-image: url('https://timeweb.com/ru/community/article/e5/e56269f14a842402ebcf0e39d405d671.jpg');
+            background-size: cover;
             display: flex;
             justify-content: center;
             align-items: center;
