--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Discord Logo Centered</title>
     <style>
         body {
-            background-image: url('https://timeweb.com/ru/community/article/e5/e56269f14a842402ebcf0e39d405d671.jpg');
-            background-size: cover;
-            background-position: center;
+            background-color: black; /* Устанавливаем чёрный фон */
             display: flex;
             justify-content: center;
             align-items: center;
