--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Discord Logo Centered</title>
     <style>
         body {
-            background-color: black; /* Устанавливаем чёрный фон */
+            background-color: black;
             display: flex;
             justify-content: center;
             align-items: center;
