--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Discord Logo Centered</title>
     <style>
         body {
-            background-color: black; /* Устанавливаем чёрный фон */
+            background-color: black;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-    <img src="discord-logo.png" alt="Discord Logo">
+    <img src="discord-logo.png" alt="sigmaunited">
 </body>
 </html>
