--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-    <img src="discord-logo.png" alt="sigmaunited">
+    <img src="https://timeweb.com/ru/community/article/e5/e56269f14a842402ebcf0e39d405d671.jpg" alt="sigmaunited">
 </body>
 </html>
