--- a/index.html
+++ b/index.html
@@ -3,24 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discord Logo Centered</title>
+    <title>Black Page</title>
     <style>
         body {
             background-color: black;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
-        }
-
-        img {
-            width: 150px;
-            height: auto;
+            height: 100vh;
         }
     </style>
 </head>
 <body>
-    <img src="https://timeweb.com/ru/community/article/e5/e56269f14a842402ebcf0e39d405d671.jpg" alt="sigmaunited">
 </body>
 </html>
