--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Black Page</title>
+    <title>Clickable Discord Logo</title>
     <style>
         body {
             background-color: black;
-            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             height: 100vh;
+            margin: 0;
+        }
+
+        img {
+            width: 150px;
+            height: auto;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
+    <a href="https://discord.gg/rcWkKkb6Tg" target="_blank">
+        <img src="discord-logo.png" alt="Discord Logo">
+    </a>
 </body>
 </html>
