--- a/index.html
+++ b/index.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clickable Discord Logo</title>
+    <title>Black Page</title>
     <style>
         body {
             background-color: black;
+            margin: 0;
+            height: 100vh; 
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
+            color: white; 
+            font-size: 24px; 
+            cursor: pointer;
         }
 
-        img {
-            width: 150px;
-            height: auto;
-            cursor: pointer;
+        a {
+            color: white;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
     <a href="https://discord.gg/rcWkKkb6Tg" target="_blank">
-        <img src="discord-logo.png" alt="Discord Logo">
+        Кликните сюда, чтобы перейти на Discord
     </a>
 </body>
 </html>
