--- a/index.html
+++ b/index.html
@@ -6,26 +6,12 @@
     <title>Black Page</title>
     <style>
         body {
-            background-color: black;
+            background-color: black; /* Чёрный фон */
             margin: 0;
-            height: 100vh; 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white; 
-            font-size: 24px; 
-            cursor: pointer;
-        }
-
-        a {
-            color: white;
-            text-decoration: none;
+            height: 100vh; /* Заполняет весь экран */
         }
     </style>
 </head>
 <body>
-    <a href="https://discord.gg/rcWkKkb6Tg" target="_blank">
-        Кликните сюда, чтобы перейти на Discord
-    </a>
 </body>
 </html>
