--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Black Page</title>
+    <title>Discord Logo Centered</title>
     <style>
         body {
-            background-color: black; /* Чёрный фон */
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
             margin: 0;
-            height: 100vh; /* Заполняет весь экран */
+        }
+
+        img {
+            width: 150px;
+            height: auto;
         }
     </style>
 </head>
 <body>
+    <img src="discord-logo.png" alt="Discord Logo">
 </body>
 </html>
